<resources>
    <string name="app_name">PhotosShare</string>
    <string name="action_settings">Settings</string>
    <string name="create_event">Create Event</string>
    <string name="eventNameLabel">Event Name</string>
    <string name="action_done">Done</string>
    <string name="event_name">Event Name</string>
    <string name="no_events_text">There are no events</string>
    <string name="preview_description">Preview Photo of Album</string>
    <string name="nameOrEmail">Type a name or an Email</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Every 15 minutes</item>
        <item>Every 1 hour</item>
        <item>Every 3 hours</item>
        <item>Every 24 hours</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>15</item>
        <item>60</item>
        <item>180</item>
        <item>1440</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="last_sync_folders">Last Sync Folders</string>
    <string name="last_sync_photos">Last Sync Photos</string>
    <string name="master_switch">Sync Photos</string>
    <string name="master_switch_on_summary">Photos are syncing periodically</string>
    <string name="master_switch_off_summary">Photo sync is disabled</string>
    <string name="sync_interval">Sync Interval</string>
    <string name="noActiveEvent">No Active Event</string>
    <string name="clickToCreate">Click on the \'+\' to create event</string>
    <string name="attendees">Attendees</string>
    <string name="event_name_example">e.g. \'Vacation in Paris\'</string>
    <string name="start">Start</string>
    <string name="end">End</string>
</resources>
